# mintomic

./: .travis.yml
cmake/: BuildSettings.cmake
include/mintomic/: platform_detect.h
include/mintomic/private/: mintomic_gcc_arm.h  mintomic_gcc_x86-64.h  mintomic_msvc.h
include/mintsystem/private/: tid_msvc.h
src/mintomic/: mintomic_gcc.c
tests/: CMakeLists.txt  template.main.cpp  template.test_mutex_acq_rel.cpp  template.test_pthread_mutex.cpp
